--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@m2d/core": "^1.5.0",
+    "@m2d/html": "^1.1.10",
+    "@m2d/image": "^1.3.1",
+    "@m2d/list": "^0.0.8",
+    "@m2d/math": "^0.0.6",
+    "@m2d/table": "^0.1.0",
     "marked": "^16.3.0",
     "mdast2docx": "^1.4.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
     "unified": "^11.0.5"
   },
